# arduino_datalink

./: README.md  datalink.ino  delete_log.sh  log.py  pyproject.toml  schematic.py  serial_reader.py
ldr.ino/: ldr.ino.ino
